refactor: Budget mapper
Added mappers for budget and budget row